tests/sumo/basic/tls/NEMA/errors/1/output.sumo
Loading net-file from 'net.net.xml' ... done (13ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (2ms).
Loading done.
Simulation version v1_11_0+1299-0d4808d started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.20s
 Real time factor: 2475.25
 UPS: 131881.188119
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 72
 Waiting: 1
Statistics (avg):
 RouteLength: 362.34
 Speed: 7.67
 Duration: 62.78
 WaitingTime: 25.89
 TimeLoss: 43.82
 DepartDelay: 0.97

